[gd_scene load_steps=24 format=4 uid="uid://r37cbstbtly"]

[ext_resource type="Script" uid="uid://73hiy7xps23v" path="res://scripts/mental_room_01.gd" id="1_i04p7"]
[ext_resource type="Texture2D" uid="uid://vo32gu3u4roh" path="res://assets/images/outside_sky.png" id="2_vw2ny"]
[ext_resource type="Texture2D" uid="uid://b4qnleyowidsy" path="res://assets/images/area/bedroom_01.png" id="3_ekq7g"]
[ext_resource type="Texture2D" uid="uid://cfkoed3db0d10" path="res://assets/images/area/bathroom_01.png" id="4_5x623"]
[ext_resource type="Texture2D" uid="uid://puj7g8sd5in4" path="res://assets/images/area/mental_room_01.png" id="5_gvee8"]
[ext_resource type="Texture2D" uid="uid://xshsawfgrgay" path="res://assets/images/world_tile.png" id="5_qw4bf"]
[ext_resource type="PackedScene" uid="uid://dkoabgga4m8lb" path="res://scenes/chars/player.tscn" id="6_dblha"]
[ext_resource type="Texture2D" uid="uid://dp7mpwphlerby" path="res://assets/images/hosp_bed.png" id="7_0y3eh"]
[ext_resource type="AudioStream" uid="uid://uis3tchqt6s3" path="res://assets/sfxs/music-box-34179.mp3" id="10_i04p7"]
[ext_resource type="PackedScene" uid="uid://b6lq8cq24br7h" path="res://scenes/texts/interact_prompt.tscn" id="10_sdpj0"]
[ext_resource type="PackedScene" uid="uid://crtoimk5yma2x" path="res://scenes/items/door.tscn" id="11_rq838"]
[ext_resource type="PackedScene" uid="uid://d3i6btwaa5345" path="res://scenes/texts/dialogue.tscn" id="12_ii15b"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cdkw2"]
texture = ExtResource("2_vw2ny")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:1/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xv5gm"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_cdkw2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1qxex"]
texture = ExtResource("3_ekq7g")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sgxps"]
texture = ExtResource("4_5x623")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i04p7"]
texture = ExtResource("5_gvee8")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0

[sub_resource type="TileSet" id="TileSet_nbnyv"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_sgxps")
sources/0 = SubResource("TileSetAtlasSource_1qxex")
sources/2 = SubResource("TileSetAtlasSource_i04p7")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gu5dh"]
texture = ExtResource("5_qw4bf")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_4meus"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_gu5dh")

[sub_resource type="TileSet" id="TileSet_48t7m"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1

[sub_resource type="SpriteFrames" id="SpriteFrames_gvee8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_0y3eh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gvee8"]
radius = 28.284271

[node name="MentalRoom01" type="Node2D"]
script = ExtResource("1_i04p7")

[node name="Darkness" type="CanvasModulate" parent="."]
visible = false
color = Color(0, 0, 0, 1)

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Outside" type="TileMapLayer" parent="TileMap"]
z_index = -5
tile_set = SubResource("TileSet_xv5gm")

[node name="Background" type="TileMapLayer" parent="TileMap"]
z_index = -1
tile_map_data = PackedByteArray("AAD4//n/AgAAAAAAAAD4//r/AgAAAAEAAAD4//v/AgAAAAIAAAD4//z/AgAAAAMAAAD4//3/AgAAAAQAAAD4//7/AgAAAAUAAAD4////AgAAAAYAAAD5//n/AgABAAAAAAD5//r/AgABAAEAAAD5//v/AgABAAIAAAD5//z/AgABAAMAAAD5//3/AgABAAQAAAD5//7/AgABAAUAAAD5////AgABAAYAAAD6//n/AgACAAAAAAD6//r/AgACAAEAAAD6//v/AgACAAIAAAD6//z/AgACAAMAAAD6//3/AgACAAQAAAD6//7/AgACAAUAAAD6////AgACAAYAAAD7//n/AgADAAAAAAD7//r/AgADAAEAAAD7//v/AgADAAIAAAD7//z/AgADAAMAAAD7//3/AgADAAQAAAD7//7/AgADAAUAAAD7////AgADAAYAAAD8//n/AgAEAAAAAAD8//r/AgAEAAEAAAD8//v/AgAEAAIAAAD8//z/AgAEAAMAAAD8//3/AgAEAAQAAAD8//7/AgAEAAUAAAD8////AgAEAAYAAAD9//n/AgAFAAAAAAD9//r/AgAFAAEAAAD9//v/AgAFAAIAAAD9//z/AgAFAAMAAAD9//3/AgAFAAQAAAD9//7/AgAFAAUAAAD9////AgAFAAYAAAD+//n/AgAGAAAAAAD+//r/AgAGAAEAAAD+//v/AgAGAAIAAAD+//z/AgAGAAMAAAD+//3/AgAGAAQAAAD+//7/AgAGAAUAAAD+////AgAGAAYAAAD///n/AgAHAAAAAAD///r/AgAHAAEAAAD///v/AgAHAAIAAAD///z/AgAHAAMAAAD///3/AgAHAAQAAAD///7/AgAHAAUAAAD/////AgAHAAYAAAAAAPn/AgAIAAAAAAAAAPr/AgAIAAEAAAAAAPv/AgAIAAIAAAAAAPz/AgAIAAMAAAAAAP3/AgAIAAQAAAAAAP7/AgAIAAUAAAAAAP//AgAIAAYAAAABAPn/AgAJAAAAAAABAPr/AgAJAAEAAAABAPv/AgAJAAIAAAABAPz/AgAJAAMAAAABAP3/AgAJAAQAAAABAP7/AgAJAAUAAAABAP//AgAJAAYAAAACAPn/AgAKAAAAAAACAPr/AgAKAAEAAAACAPv/AgAKAAIAAAACAPz/AgAKAAMAAAACAP3/AgAKAAQAAAACAP7/AgAKAAUAAAACAP//AgAKAAYAAAADAPn/AgALAAAAAAADAPr/AgALAAEAAAADAPv/AgALAAIAAAADAPz/AgALAAMAAAADAP3/AgALAAQAAAADAP7/AgALAAUAAAADAP//AgALAAYAAAAEAPn/AgAMAAAAAAAEAPr/AgAMAAEAAAAEAPv/AgAMAAIAAAAEAPz/AgAMAAMAAAAEAP3/AgAMAAQAAAAEAP7/AgAMAAUAAAAEAP//AgAMAAYAAAAFAPn/AgANAAAAAAAFAPr/AgANAAEAAAAFAPv/AgANAAIAAAAFAPz/AgANAAMAAAAFAP3/AgANAAQAAAAFAP7/AgANAAUAAAAFAP//AgANAAYAAAAGAPn/AgAOAAAAAAAGAPr/AgAOAAEAAAAGAPv/AgAOAAIAAAAGAPz/AgAOAAMAAAAGAP3/AgAOAAQAAAAGAP7/AgAOAAUAAAAGAP//AgAOAAYAAAA=")
tile_set = SubResource("TileSet_nbnyv")

[node name="Middle" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AADw//j/AAAAAAAAAADw//n/AAAAAAAAAADw//r/AAAAAAAAAADw//v/AAAAAAAAAADw//z/AAAAAAAAAADw//3/AAAAAAAAAADw//7/AAAAAAAAAADw////AAAAAAAAAADx//j/AAAAAAAAAADx//n/AAAAAAAAAADx//r/AAAAAAAAAADx//v/AAAAAAAAAADx//z/AAAAAAAAAADx//3/AAAAAAAAAADx//7/AAAAAAAAAADx////AAAAAAAAAADx/wAAAAAAAAAAAADw/wAAAAAAAAAAAADv/wAAAAAAAAAAAADu/wAAAAAAAAAAAADu////AAAAAAAAAADu//7/AAAAAAAAAADu//3/AAAAAAAAAADu//z/AAAAAAAAAADu//v/AAAAAAAAAADu//r/AAAAAAAAAADu//n/AAAAAAAAAADu//j/AAAAAAAAAADv//j/AAAAAAAAAADv//7/AAAAAAAAAADv////AAAAAAAAAADv//3/AAAAAAAAAADv//z/AAAAAAAAAADv//v/AAAAAAAAAADv//r/AAAAAAAAAADv//n/AAAAAAAAAADy//j/AAAAAAAAAADy//n/AAAAAAAAAADy//r/AAAAAAAAAADy//v/AAAAAAAAAADy//z/AAAAAAAAAADy//3/AAAAAAAAAADy//7/AAAAAAAAAADy////AAAAAAAAAADy/wAAAAAAAAAAAADz//j/AAAAAAAAAADz//n/AAAAAAAAAADz//r/AAAAAAAAAADz//v/AAAAAAAAAADz//z/AAAAAAAAAADz//3/AAAAAAAAAADz//7/AAAAAAAAAADz////AAAAAAAAAADz/wAAAAAAAAAAAAD0//j/AAAAAAAAAAD0//n/AAAAAAAAAAD0//r/AAAAAAAAAAD0//v/AAAAAAAAAAD0//z/AAAAAAAAAAD0//3/AAAAAAAAAAD0//7/AAAAAAAAAAD0////AAAAAAAAAAD0/wAAAAAAAAAAAAD1//j/AAAAAAAAAAD1//n/AAAAAAAAAAD1//r/AAAAAAAAAAD1//v/AAAAAAAAAAD1//z/AAAAAAAAAAD1//3/AAAAAAAAAAD1//7/AAAAAAAAAAD1////AAAAAAAAAAD1/wAAAAAAAAAAAAD2//j/AAAAAAAAAAD2//n/AAAAAAAAAAD2//r/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD2/wAAAAAAAAAAAAD3//j/AAAAAAAAAAD3//n/AAAAAAAAAAD3//r/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD4/wAAAAAAAAAAAAD5/wAAAAAAAAAAAAD6/wAAAAAAAAAAAAD7/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAAHAPj/AAAAAAAAAAAHAPn/AAAAAAAAAAAHAPr/AAAAAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAIAPj/AAAAAAAAAAAIAPn/AAAAAAAAAAAIAPr/AAAAAAAAAAAIAPv/AAAAAAAAAAAIAPz/AAAAAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAJAPj/AAAAAAAAAAAJAPn/AAAAAAAAAAAJAPr/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAAAKAPj/AAAAAAAAAAAKAPn/AAAAAAAAAAAKAPr/AAAAAAAAAAAKAPv/AAAAAAAAAAAKAPz/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAALAPj/AAAAAAAAAAALAPn/AAAAAAAAAAALAPr/AAAAAAAAAAALAPv/AAAAAAAAAAALAPz/AAAAAAAAAAALAP3/AAAAAAAAAAALAP7/AAAAAAAAAAALAP//AAAAAAAAAAAMAPj/AAAAAAAAAAAMAPn/AAAAAAAAAAAMAPr/AAAAAAAAAAAMAPv/AAAAAAAAAAAMAPz/AAAAAAAAAAAMAP3/AAAAAAAAAAAMAP7/AAAAAAAAAAAMAAAAAAAAAAAAAAANAPj/AAAAAAAAAAANAPn/AAAAAAAAAAANAPr/AAAAAAAAAAANAPv/AAAAAAAAAAANAPz/AAAAAAAAAAANAP3/AAAAAAAAAAANAP7/AAAAAAAAAAANAAAAAAAAAAAAAAAOAPj/AAAAAAAAAAAOAPn/AAAAAAAAAAAOAPr/AAAAAAAAAAAOAPv/AAAAAAAAAAAOAPz/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAP7/AAAAAAAAAAAOAAAAAAAAAAAAAAAPAPj/AAAAAAAAAAAPAPn/AAAAAAAAAAAPAPr/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPz/AAAAAAAAAAAPAP3/AAAAAAAAAAAPAP7/AAAAAAAAAAAPAAAAAAAAAAAAAAAQAPj/AAAAAAAAAAAQAPn/AAAAAAAAAAAQAPr/AAAAAAAAAAAQAPv/AAAAAAAAAAAQAPz/AAAAAAAAAAAQAP3/AAAAAAAAAAAQAP7/AAAAAAAAAAAQAAAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_4meus")

[node name="Foreground" type="TileMapLayer" parent="TileMap"]
z_index = 1
tile_set = SubResource("TileSet_48t7m")

[node name="Player" parent="." instance=ExtResource("6_dblha")]
position = Vector2(48, -70)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-3.33786e-06, -270)

[node name="Items" type="Node" parent="."]

[node name="hosp_bed" type="AnimatedSprite2D" parent="Items"]
z_index = 1
position = Vector2(-335, -70)
scale = Vector2(1.1, 1.1)
sprite_frames = SubResource("SpriteFrames_gvee8")

[node name="Label" type="Label" parent="Items"]
offset_left = 62.0
offset_top = -325.0
offset_right = 114.0
offset_bottom = -302.0
text = "203"
horizontal_alignment = 1

[node name="Prompts" type="Node" parent="."]

[node name="interact_02" parent="Prompts" instance=ExtResource("10_sdpj0")]
z_index = 1
position = Vector2(-57, -70)

[node name="mr_door_lock" parent="Prompts" instance=ExtResource("10_sdpj0")]
position = Vector2(83, -70)

[node name="Sounds" type="Node" parent="."]

[node name="MusicBoxSfx" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2(-57, -114)
stream = ExtResource("10_i04p7")

[node name="Triggers" type="Node" parent="."]

[node name="MusicBox" type="Area2D" parent="Triggers"]
position = Vector2(-57, -70)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/MusicBox"]
shape = SubResource("CircleShape2D_gvee8")

[node name="MentalRoomDoor01" parent="Triggers" instance=ExtResource("11_rq838")]
position = Vector2(83, -70)

[node name="Texts" type="Node" parent="."]

[node name="OverDialogue01" parent="Texts" instance=ExtResource("12_ii15b")]
position = Vector2(-301, -70)

[node name="interact_01" parent="Texts/OverDialogue01" instance=ExtResource("10_sdpj0")]
position = Vector2(0, 1)

[connection signal="body_entered" from="Triggers/MusicBox" to="." method="_on_music_box_body_entered"]
[connection signal="body_exited" from="Triggers/MusicBox" to="." method="_on_music_box_body_exited"]
